<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CipherChat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_choose_server">CipherChat</string>
    <string name="connectServerBtnTxt">Enter</string>
    <string name="serverPortText">Port</string>
    <string name="serverIPText">Server IP:</string>
    <string name="title_activity_chat">Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="userName">Username</string>
    <string name="passwordString">Password</string>
    <string name="login">Log-In</string>
    <string name="register">Register</string>
    <string name="onlineUsers">Online Users:</string>
    <string name="sendMessage">Send</string>
    <string name="OnlineUsers">Online Users:</string>

</resources>
